dataset1235/2025-2/610742602/users/1343319280/executions/677928262_1462915504.log
== RUN (2025-08-26 21:06:12)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / (2 * tan(pi/5))
area = 5/2 * lado * apotema 

# Saída 
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:05:00)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / 2 * tan(pi/5)
area = 5/2 * lado * apotema 

# Saída 
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:73.56243096054278
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:32.69441376024124
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:109.88955736081083
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:58.12340224042886
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:14.530850560107215
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:90.81781600067009
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:08:07)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / (2 * tan(pi/5))
area = 5/2 * lado * apotema 

# Saída 
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:04:42)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / (2 * tan(pi/5)
area = 5/2 * lado * apotema 

# Saída 
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan(pi/5)
                     ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:05:22)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / 2 * tan(pi/5)
area = 5/2 * lado * apotema 

# Saída 
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:08:06)
-- CODE: 
from math import *
# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))
apotema = lado / (2 * tan(pi/5))
area = 5/2 * lado * apotema 

# Saída 
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:49:01)
-- CODE: 
import math

# Entrada 
lado = int(input("Para calcular a área do pentágono, digite o número de lados:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Para calcular a área do pentágono, digite o número de lados:
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Para calcular a área do pentágono, digite o número de lados:
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Para calcular a área do pentágono, digite o número de lados:
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Para calcular a área do pentágono, digite o número de lados:
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Para calcular a área do pentágono, digite o número de lados:
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Para calcular a área do pentágono, digite o número de lados:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
